<resources>
    <string name="app_name">LeeDane</string>
    <string name="app_dirsname">leedane</string>
    <string name="temp_filepath">temp</string>
    <string name="qr_code_filepath">qrcode</string>
    <string name="action_settings">设置</string>
    <string name="default_time">2016-06-25 10:10:10</string>
    <string name="default_date">2016-06-25</string>
    <string name="str_request_camera_message">是是是</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello">Hello Android, DemoAppActivity!</string>
    <string name="welcome">您好，欢迎您使用leedane，本系统目前还在开发测试阶段，难免存在很多问题，希望多多谅解，谢谢。。。。。。</string>
    <string name="no_text">无内容</string>
    <string name="dane">leedane</string>
    <string name="dane_email">email:leedane9@gmail.com</string>
    <string name="out">退出</string>
    <string name="feedback">问题反馈</string>
    <string name="image_detail">查看图片</string>
    <string name="search">搜索</string>
    <string name="settings">设置</string>
    <string name="select_local_image">选择本地图片</string>
    <string name="custom_title">自定义标题</string>
    <string name="save">保存</string>
    <string name="draft">草稿</string>
    <string name="reset">重置</string>
    <string name="article">正文</string>
    <string name="comment">评论</string>
    <string name="transmit">转发</string>
    <string name="add_tag">添加标签</string>
    <string name="loading">数据加载中。。。</string>
    <string name="load_more">点击加载更多</string>
    <string name="load_finish">数据加载完成</string>
    <string name="no_load_more">没有更多数据</string>
    <string name="click_to_load">点击重试</string>
    <string name="load_more_error">加载失败,点击重新加载</string>
    <string name="submit">提交</string>
    <string name="copyText">复制文字</string>
    <string name="copyLink">复制链接</string>
    <string name="setWallpaper">设为壁纸</string>
    <string name="delete">删除</string>
    <string name="unlike">不喜欢</string>
    <string name="score">积分</string>
    <string name="comlpete">完成</string>
    <string name="oparate">操作</string>
    <string name="edit">编辑</string>
    <string name="sort">排序</string>
    <string name="clear_history">清除全部搜索历史</string>
    <string name="add_top">置顶</string>
    <string name="fanyi">翻译</string>
    <string name="send">发送</string>
    <string name="status">状态</string>
    <string name="normal">正常</string>
    <string name="disable">禁用</string>
    <string name="type">类型</string>
    <string name="img_link">图片链接</string>
    <string name="save_imgage">保存图片</string>
    <string name="browser_imgage">浏览器查看图片</string>
    <string name="tip_double_click_exit">再按一次退出程序</string>
    <string name="footer">我是有底线的</string>
    <string name="restore">恢复默认设置</string>
    <string name="is_not_a_link">这格式似乎不是一个链接</string>
    <string name="preview">预览</string>
    <string name="search_condition">更多条件</string>
    <string name="ok">确定</string>
    <string name="close">关闭</string>
    <string name="home">首页</string>
    <string name="blog">博客</string>
    <string name="crash_file_path">"/crash"</string>
    <string name="crash_toast_message">程序出现异常,即将退出</string>
    <string name="crash_write_error">文件写入时出现错误</string>
    <string name="hint_welcome_register">欢迎您注册</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_login">登录</string>
    <string name="hint_system_desc">每一天 新开始</string>
    <string name="hint_system">LeeDane</string>
    <string name="no_login">欢迎,您还未登录</string>
    <string name="please_login">请先登录</string>
    <string name="login">登录</string>
    <string name="version">系统更新</string>
    <string name="outLogin">退出登录</string>
    <string name="username_null">请输入用户名</string>
    <string name="password_null">请输入密码</string>
    <string name="confirm_password_null">请输入确认密码</string>
    <string name="mobile_phone_null">请输入手机号码</string>
    <string name="password_no_match">两次密码不一致</string>
    <string name="login_success">登录成功</string>
    <string name="login_error">登录失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_error">注册失败</string>
    <string name="phone_login">手机号码登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="register">手机注册</string>
    <string name="hint_your_phone">请输入正确的手机号码</string>
    <string name="send_message">获取验证码</string>
    <string name="hint_validation_code">请输入验证码</string>
    <string name="nav_gallery">我的图库</string>
    <string name="nav_financial">我的记账</string>
    <string name="nav_attention">我的关注</string>
    <string name="nav_message">我的消息</string>
    <string name="qr_code_idcard">二维码名片</string>
    <string name="nav_setting">我的设置</string>
    <string name="nav_file">我的文件</string>
    <string name="nav_personnal_centre">个人中心</string>
    <string name="nav_system">系统</string>
    <string name="nav_help">帮助</string>
    <string name="nav_share">分享</string>
    <string name="nav_loginout">退出登录</string>
    <string name="nav_download">下载</string>
    <string name="system_settings">设置</string>
    <string name="setting_loginout">退出登录</string>
    <string name="qr_scan_tips">扫码提示信息</string>
    <string name="str_request">相机相关信息</string>
    <string name="personal_title">个人中心</string>
    <string name="personal_is_friend">已加好友</string>
    <string name="personal_friend_wait">等待确认</string>
    <string name="personal_add_friend">加好友</string>
    <string name="personal_is_fan">已关注</string>
    <string name="personal_add_fan">关注Ta</string>
    <string name="personal_no_friend">解除好友关系</string>
    <string name="personal_is_sign_in">已签到</string>
    <string name="personal_sign_in">签到</string>
    <string name="personal_mood">心情</string>
    <string name="personal_attention">关注</string>
    <string name="personal_fans">粉丝</string>
    <string name="personal_comment">评论</string>
    <string name="personal_transmit">转发</string>
    <string name="personal_look">查看</string>
    <string name="personal_praise">赞</string>
    <string name="personal_collection">收藏</string>
    <string name="personal_notification">通知</string>
    <string name="personal_score">积分</string>
    <string name="personal_login_history">登录历史</string>
    <string name="personal_chat">私信</string>
    <string name="personal_gallery">图库</string>
    <string name="personal_info">基本信息</string>
    <string name="personal_shielding">屏蔽</string>
    <string name="personal_report">举报</string>
    <string name="personal_can_comment">设置可以评论(启用)</string>
    <string name="personal_no_comment">设置不可评论(禁用)</string>
    <string name="personal_can_transmit">设置可以转发(启用)</string>
    <string name="personal_no_transmit">设置不可转发(禁用)</string>
    <string name="update_header">更换头像</string>
    <string name="select_gallery">选择系统图库</string>
    <string name="confirm_upload_hander">确定上传图像</string>
    <string name="mood">我的心情</string>
    <string name="mood_publish">立即发表</string>
    <string name="mood_transmit">立即转发</string>
    <string name="mood_comment">立即评论</string>
    <string name="mood_content_hint">请输入不大于140个文字</string>
    <string name="old_mood">原文：</string>
    <string name="comment_hint">说点什么吧</string>
    <string name="mood_can_comment">是否能评论</string>
    <string name="mood_can_transmit">是否能转发</string>
    <string name="topic">话题</string>
    <string name="info_age">年龄：</string>
    <string name="info_birth_day">出生日期：</string>
    <string name="info_email">邮箱：</string>
    <string name="info_mobile_phone">手机号码：</string>
    <string name="info_qq">QQ号码：</string>
    <string name="info_sex">性别：</string>
    <string name="info_personal_introduction">个人介绍：</string>
    <string name="info_personal_request_time">最近操作：</string>
    <string name="system_download">文件下载</string>
    <string name="all_start">全部开始</string>
    <string name="all_stop">全部暂停</string>
    <string name="cancel">取消</string>
    <string name="download_per">0%</string>
    <string name="download_now">正在下载</string>
    <string name="download_stop">暂停下载</string>
    <string name="system_upload">文件上传</string>
    <string name="upload_file_tip">提示：一次性只能上传5个文件</string>
    <string name="upload_file_normal">普通上传</string>
    <string name="upload_file_app_version">APP版本上传</string>
    <string name="app_version_desc_hint">版本描述信息</string>
    <string name="app_version_number_hint">版本的编号</string>
    <string name="image_detail_current">0/0</string>
    <string name="border_top">border_top</string>
    <string name="border_bottom">border_bottom</string>
    <string name="image_url">image_url</string>
    <string name="gallery">我的图库</string>
    <string name="gallery_add_tip">添加网络图片到"我的图库"中</string>
    <string name="gallery_add_network_link">图片链接(必须填)</string>
    <string name="gallery_add_width">宽度(不确定请不填写)</string>
    <string name="gallery_add_height">高度(不确定请不填写)</string>
    <string name="gallery_add_length">大小(kb换算，不确定请不填写)</string>
    <string name="gallery_add_submit">添加图库</string>
    <string name="gallery_add">加入图库</string>
    <string name="gallery_menu_delete">移出图库</string>
    <string name="gallery_menu_report">举报</string>
    <string name="gallery_menu_share">分享</string>
    <string name="attention">我的关注</string>
    <string name="message">我的消息</string>
    <string name="report_tip">请选择举报项：</string>
    <string name="report_seqing">色情低俗</string>
    <string name="report_guanggao">广告骚扰</string>
    <string name="report_zhengzhi">政治敏感</string>
    <string name="report_weifa">违法(暴力恐怖、违禁品等)</string>
    <string name="report_qingsu">倾诉投诉(诽谤、抄袭、冒用...)</string>
    <string name="report_hint">请填写具体的举报内容</string>
    <string name="mood_detail">心情详情</string>
    <string name="fan_my_fans">我的粉丝</string>
    <string name="fan_to_fans">Ta的粉丝</string>
    <string name="fan_my_attention">我的关注</string>
    <string name="fan_to_attention">Ta的关注</string>
    <string name="add_attention">加关注</string>
    <string name="fan_each_other">互相关注</string>
    <string name="user_info">用户中心</string>
    <string name="user_base">基本信息</string>
    <string name="user_base_update_success">基本信息修改成功</string>
    <string name="user_base_update_error">基本信息修改失败</string>
    <string name="my_qr_code">我的二维码名片</string>
    <string name="menu_settings">Settings</string>
    <string name="scan_text">请将二维码放入框内</string>
    <string name="mipca_user_info_personal">查看个人中心</string>
    <string name="mipca_user_info_tip">检测到这是一个用户：</string>
    <string name="mipca_user_info_add">关注Ta</string>
    <string name="mipca_user_name">用户名称</string>
    <string name="scan_image">扫描本地图片</string>
    <string name="find">我的发现</string>
    <string name="update_user_tip">成功设置密码后将退出当前登录，输入新的密码才能重新进入系统！注意：新密码不能跟原来的密码一样，为了您的账户安全,密码最好是字母+数字的复杂组合，长度不能低于8位数。</string>
    <string name="update_user_old_psw">原密码：</string>
    <string name="update_user_hint_old_psw">请输入您原来的登录密码</string>
    <string name="update_user_new_psw">新密码：</string>
    <string name="update_user_hint_new_psw">请输入不能低于8位的新密码</string>
    <string name="update_user_confirm_psw">确认密码：</string>
    <string name="update_user_hint_confirm_psw">请再次输入新密码</string>
    <string name="financial_menu_search">搜索</string>
    <string name="financial_menu_location">地址管理</string>
    <string name="financial_menu_category">编辑分类</string>
    <string name="financial_menu_settings">基本设置</string>
    <string name="financial_menu_cloud">云端同步</string>
    <string name="search_select_title">请选择条件</string>
    <string name="search_start_time">开始时间：</string>
    <string name="search_end_time">结束时间：</string>
    <string name="search_hint_start_time">点击选择开始时间</string>
    <string name="search_hint_end_time">点击选择结束时间</string>
    <string name="search_level">请选择分类：</string>
    <string name="nearby_out">清除位置退出</string>
    <string name="nearby_refresh">刷新</string>
    <string name="nearby_woman">只看女生</string>
    <string name="nearby_man">只看男生</string>
    <string name="nearby_all">查看全部</string>
</resources>