<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_tip"/>
    <RadioGroup
        android:id="@+id/report_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/report_seqing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_seqing"/>
        <RadioButton
            android:id="@+id/report_guanggao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_guanggao"/>
        <RadioButton
            android:id="@+id/report_zhengzhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_zhengzhi"/>
        <RadioButton
            android:id="@+id/report_weifa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_weifa"/>
        <RadioButton
            android:id="@+id/report_qingsu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_qingsu"/>
    </RadioGroup>
    <EditText
        android:id="@+id/report_qingsu_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:hint="@string/report_hint"/>
    <TextView
        android:id="@+id/report_submit"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_login_seletorbg"
        android:clickable="true"
        android:minWidth="250dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="#000"
        android:textSize="17dp" />
</LinearLayout>
