<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_user_tip"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/update_user_old_psw"/>
        <com.leedane.cn.customview.EyeEditText
            android:id="@+id/update_user_old_psw"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableRight="@drawable/eye"
            android:hint="@string/update_user_hint_old_psw"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/update_user_new_psw"/>
        <com.leedane.cn.customview.EyeEditText
            android:id="@+id/update_user_new_psw"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableRight="@drawable/eye"
            android:hint="@string/update_user_hint_new_psw"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/update_user_confirm_psw"/>
        <com.leedane.cn.customview.EyeEditText
            android:id="@+id/update_user_confirm_psw"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableRight="@drawable/eye"
            android:hint="@string/update_user_hint_confirm_psw"/>
    </LinearLayout>
</LinearLayout>