<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_file_tip"/>
    <LinearLayout
        android:id="@+id/hidden_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/upload_file_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/upload_file_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_file_normal"/>
            <RadioButton
                android:id="@+id/upload_file_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_file_app_version"/>
        </RadioGroup>
        <EditText
            android:id="@+id/app_version_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_version_number_hint"/>
        <EditText
            android:id="@+id/app_version_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_version_desc_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/upload_all_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/all_start"/>
        <Button
            android:id="@+id/upload_all_stop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/all_stop"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/upload_file_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>
</LinearLayout>
    </ScrollView>