<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    android:orientation="vertical">
    <TextView
        android:id="@+id/mipca_user_info_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mipca_user_info_tip"/>
    <TextView
        android:id="@+id/mipca_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mipca_user_name"/>
    <com.leedane.cn.customview.CircularImageView
        android:id="@+id/mipca_user_info_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/no_user"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/mipca_user_info_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/mipca_user_info_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mipca_user_info_personal"/>
        <Button
            android:id="@+id/mipca_user_info_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/mipca_user_info_add"/>
    </LinearLayout>
</LinearLayout>
