<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="15dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/gallery_add_network_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/gallery_add_network_link"/>

    <EditText
        android:id="@+id/gallery_add_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="number"
        android:hint="@string/gallery_add_width"/>
    <EditText
        android:id="@+id/gallery_add_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="number"
        android:hint="@string/gallery_add_height"/>

    <EditText
        android:id="@+id/gallery_add_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="number"
        android:hint="@string/gallery_add_length"/>

    <TextView
        android:id="@+id/gallery_add_submit"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_login_seletorbg"
        android:clickable="true"
        android:minWidth="250dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/gallery_add_submit"
        android:textColor="#000"
        android:textSize="17dp" />
</LinearLayout>
