<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
	    android:layout_width="match_parent"
		android:layout_height="45dp" 
		android:gravity="center"
		android:textSize="15dp"
		android:text="@string/search_select_title"
		android:textColor="#343434"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#999999"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_10dp"
        android:text="@string/search_start_time"/>
    <EditText
        android:id="@+id/search_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:background="@drawable/edittext_no_border"
        android:paddingLeft="@dimen/default_10dp"
        android:minHeight="@dimen/default_30dp"
        android:hint="@string/search_hint_start_time"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#999999"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_10dp"
        android:text="@string/search_end_time"/>
    <EditText
        android:id="@+id/search_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/default_30dp"
        android:paddingLeft="@dimen/default_10dp"
        android:focusable="false"
        android:background="@drawable/edittext_no_border"
        android:hint="@string/search_hint_end_time"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#999999"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_10dp"
        android:text="@string/search_level"/>
    <Spinner
        android:id="@+id/search_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#999999"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_10dp"
        android:layout_marginBottom="@dimen/default_10dp"
        android:gravity="right"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/search_btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/default_10dp"
            android:background="@drawable/default_btn_seletorbg"
            android:minWidth="120dp"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="#000"
            android:textSize="@dimen/default_16sp" />
        <TextView
            android:id="@+id/search_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/default_10dp"
            android:background="@drawable/default_btn_seletorbg"
            android:minWidth="120dp"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="#000"
            android:textSize="@dimen/default_16sp" />

    </LinearLayout>
</LinearLayout>
